update for MN calculator

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import HomeBanner from "../components/HomeBanner.astro";
   <Section>
     <h2>Overview</h2>
     <p>
-      This induced travel calculator, developed with Pennsylvania data, allows the
+      This induced travel calculator, developed with Minnesota data, allows the
       user to obtain an estimate of how many annual vehicle-miles of travel (VMT) will
       be associated with any new road capacity. Estimates are available for
       different road categories and for both urban and rural roads for selected metro areas in the state. This calculator can be used to assess the accuracy of
