--- a/src/pages/other.astro
+++ b/src/pages/other.astro
@@ -10,6 +10,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
             <p>
         <a href="https://travel-calculator-henna.vercel.app/">The New Jersey Induced Travel Calculator</a>
      </p>
+     <p>
+      <a href="https://pa-travel-calculator.vercel.app/">The Pennsylvania Induced Travel Calculator</a>
+   </p>
      <p></p>
      <p></p>
      <p>Other calculators produced elsewhere are listed here.</p>
