--- a/src/pages/acknowledgements.astro
+++ b/src/pages/acknowledgements.astro
@@ -10,9 +10,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       This calculator is based on the code for the <a
         href="https://travelcalculator.ncst.ucdavis.edu/"
         >California Induced Travel Calculator</a
-      >, thanks to Jamey Volker and Susan Handy for providing the code. Wei San
-      Loh assisted with the data, Benjamin Noland assisted with writing the HTML
-      code. Robert Noland wrote the text for the calculator. 
+      >, thanks to Jamey Volker and Susan Handy for providing the code. 
+         Benjamin Noland assisted with writing the HTML
+         code. Robert Noland wrote the text for the calculator and curated the data. 
       
         This calculator is built off of the <a
           target="_blank"
@@ -26,20 +26,16 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       of New Jersey.
     </p>
     <p>Favicon image generated using Microsoft Copilot.</p>
-    <p>
-      Code for the NJ Induced Travel calculator is available at <a
-        target="_blank"
-        href="https://github.com/rbnoland/travel-calculator"
-        >https://github.com/rbnoland/travel-calculator.</a></p>
+    
 
       <p>Code for this calculator is available at <a
         target="_blank"
-        href="https://github.com/rbnoland/pa-travel-calculator"
-        >https://github.com/rbnoland/pa-travel-calculator.</a></p>
+        href="https://github.com/rbnoland/mn-travel-calculator"
+        >https://github.com/rbnoland/mn-travel-calculator.</a></p>
       </p>
      <p>Any comments or questions, please email rnoland@rutgers.edu.</p>   
          
-     <p>Version: July 16, 2024</p> 
+     <p>Version: Aug 4, 2024</p> 
     
   </Section>
 </BaseLayout>
