--- a/src/pages/references.astro
+++ b/src/pages/references.astro
@@ -115,6 +115,11 @@ import Section from "../components/Section.astro";
           >
         </p>
         <p>
+          Minnesota Department of Transportation, Performance Measure Dashboard.
+          <a target="_blank" href="https://www.dot.state.mn.us/measures/greenhouse-gas-emissions.html"
+            >https://www.dot.state.mn.us/measures/greenhouse-gas-emissions.html</a>
+        </p>
+        <p>
           Noland, R. B. (2001). Relationships between highway capacity and
           induced vehicle travel.
           <em>Transportation Research Part A: Policy and Practice</em>,
@@ -146,11 +151,7 @@ import Section from "../components/Section.astro";
             >https://doi.org/10.5822/978-1-59726-242-2_5</a
           >
         </p>
-        <p>
-          Pennsylvania Department of Environmental Protection, Pennsylvania Greenhouse Gas Inventory Report, Dec 2023.
-          <a target="_blank" href="https://www.dep.pa.gov/Citizens/climate/Pages/GHG-Inventory.aspx"
-            >https://www.dep.pa.gov/Citizens/climate/Pages/GHG-Inventory.aspx</a>
-        </p>
+        
          <p>
           Rentziou, A., Gkritza, K., &amp; Souleyrette, R. R. (2012). VMT,
           energy consumption, and GHG emissions forecasting for passenger
