added county option-not yet functional

--- a/src/components/HomeBanner.astro
+++ b/src/components/HomeBanner.astro
@@ -4,7 +4,15 @@
     To get started with the calculators, click one of the buttons below.
   </p>
   <div class="d-flex flex-wrap gap-2">
-    <a class="btn btn-lg btn-primary" href="/calculator/">Calculator &raquo;</a>
-    <a class="btn btn-lg btn-primary" href="/back-calculator/">Back-Calculator &raquo;</a>
+   <!-- First group: Blue buttons -->
+<a class="btn btn-lg btn-primary" href="/calculator/">MSA Calculator &raquo;</a>
+<a class="btn btn-lg btn-primary" href="/back-calculator/">MSA Back-Calculator &raquo;</a>
+
+<br><br> <!-- Line break between groups -->
+
+<!-- Second group: Green buttons -->
+<a class="btn btn-lg btn-success" href="/county-calculator/">County Calculator &raquo;</a>
+<a class="btn btn-lg btn-success" href="/county-back-calculator/">County Back-Calculator &raquo;</a>
+
   </div>
 </section>
