--- a/src/pages/calculator.astro
+++ b/src/pages/calculator.astro
@@ -11,7 +11,7 @@ import TravelCalculator from "../components/TravelCalculator.astro";
     </p>
   </Section>
   <Section>
-    <h2>Calculator</h2>
+    <h2>MSA Calculator</h2>
     <TravelCalculator />
   </Section>
 </BaseLayout>
