--- a/src/pages/county-back-calculator.astro
+++ b/src/pages/county-back-calculator.astro
@@ -1,15 +1,15 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Section from "../components/Section.astro";
-import TravelBackCalculator from "../components/TravelBackCalculator.astro";
+import TravelBackCalculatorCounty from "../components/TravelBackCalculator.astro";
 ---
 
-<BaseLayout pageTitle="Back-Calculator">
+<BaseLayout pageTitle="County Back-Calculator">
   <Section>
     <h2>Instructions</h2>
     <p>
       The back-calculator provides a way to estimate an “implied elasticity” that is based on any forecast that
-      has been provided for the project being evaluated. To use the back-calculator, enter the year, metro area,
+      has been provided for the project being evaluated. To use the back-calculator, enter the year, county,
       facility type, total lanes miles of additional capacity, and the forecast of annual increase in VMT. That is,
       how much VMT the project sponsors predict based on their modeling procedures. This should be an
       annual estimate of VMT since the data in the calculator are annualized values of current VMT. The
@@ -20,9 +20,8 @@ import TravelBackCalculator from "../components/TravelBackCalculator.astro";
     </Section>
 
     <Section>
-      <h2>MSA Back-Calculator</h2>
-      <TravelBackCalculator />
+      <h2>County Back-Calculator</h2>
+      <TravelBackCalculatorCounty/>
     </Section>
   </Section>
 </BaseLayout>
-
