--- a/src/components/TravelBackCalculatorCounty.astro
+++ b/src/components/TravelBackCalculatorCounty.astro
@@ -9,6 +9,7 @@
       <div class="invalid-feedback">Please select a year.</div>
     </div>
   </div>
+  
   <div class="row mb-3">
     <label for="county" class="col-lg-4 col-form-label">Select county:</label>
     <div class="col-lg-8">
@@ -18,6 +19,7 @@
       <div class="invalid-feedback">Please select a county.</div>
     </div>
   </div>
+  
   <div class="row mb-3">
     <label for="facility-type" class="col-lg-4 col-form-label">Select facility type:</label>
     <div class="col-lg-8">
@@ -134,7 +136,7 @@
 
   function loadData() {
     return new Promise<DataEntry[]>((resolve) => {
-      Papa.parse("/data/data.csv", {
+      Papa.parse("/data/county_data.csv", {
         download: true,
         header: true,
         dynamicTyping: true,
