--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import HomeBanner from "../components/HomeBanner.astro";
       This induced travel calculator, developed with Minnesota data, allows the
       user to obtain an estimate of how many annual vehicle-miles of travel (VMT) will
       be associated with any new road capacity. Estimates are available for
-      different road categories and for both urban and rural roads for selected metro areas in the state. This calculator can be used to assess the accuracy of
+      different road categories for selected metro areas (MSAs) or individual counties in the state. This calculator can be used to assess the accuracy of
       any forecasts of VMT produced for specific road projects. Any cost-benefit
       analysis of a project must consider the various trade-offs between
       providing additional road capacity, how much (if any) congestion is
@@ -36,7 +36,7 @@ import HomeBanner from "../components/HomeBanner.astro";
       To use the calculator, please select either the “Calculator” option (to
       obtain a VMT estimate) or the “Back-calculation” option (to obtain an
       implicit elasticity estimate). Both options will allow you to select the
-      year, facility type, metro area and the lane miles to be added. For the
+      year, facility type, metro area (or county) and the lane miles to be added. For the
       “Back-calculation”, you will also need to input the forecast of new VMT.
     </p>
 
