removed 2014 data, bug fix in navigation menu

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -61,8 +61,8 @@ const menuItems = [
     </a>
     <ul class="dropdown-menu">
       <li>
-        <a class={"dropdown-item " + (currentPath === "/county-back-calculator/" ? "active" : "")}
-           href="/county-back-calculator/">MSA</a>
+        <a class={"dropdown-item " + (currentPath === "/back-calculator/" ? "active" : "")}
+           href="/back-calculator/">MSA</a>
       </li>
       <li>
         <a class={"dropdown-item " + (currentPath === "/county-back-calculator/" ? "active" : "")}
