--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -59,8 +59,8 @@ import Section from "../components/Section.astro";
 
      
       <p>
-      Our first year of data is 2014 and we will update to the latest year
-      available. Data for 2015 was not available. Caution should be used when analyzing data and interpreting
+      Our first year of data is 2016 and we will update to the latest year
+      available. Data for prior years is inconsistent and has not been included. Caution should be used when analyzing data and interpreting
       results for 2020 and 2021 due to changes in travel patterns due to the
       COVID pandemic.
       </p>
