updates, elasticities and text

--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -36,7 +36,8 @@ import Section from "../components/Section.astro";
       per hour compared to an arterial road, which will have traffic signals
       and lower speeds. At the far extreme are local roads with low speed
       limits that serve final destinations, such as residential and local
-      commercial areas.
+      commercial areas. Interstates, freeways, expressways and principal arterials are also combined into a "major roads" category. 
+      This was done since sometimes reclassifications of road types are done, and combining these road types provides a better estimate.
     </p>
     <p>
       The data for vehicle-miles of travel (VMT) is not separated by urban and rural roads, therefore urban and rural data were combined by road category.  Lane mileage data is
@@ -45,7 +46,8 @@ import Section from "../components/Section.astro";
     <p>
       Road classifications available in the data are listed in the table. There are 87 counties in Minnesota. The calculator includes both county data and combined based on 
       metropolitan statistical areas (MSAs).  Some MSAs include counties in Wisconsin and North Dakota; these were not included in the MSA totals.
-      Fargo, Grand Forks, and LaCrosse-Onalaska MSAs are not included as they contain only one county in Minnesota.
+      Fargo, Grand Forks, and LaCrosse-Onalaska MSAs are not included as they contain only one county in Minnesota. The calculator also includes a combination of the 
+      Mankato-North Mankato MSA with a neighboring county, Waseca County, as major roads crossing the MSA enter Waseca County.
       
       The MSA combinations included are as follows:
       <div class="indent">
@@ -86,8 +88,66 @@ import Section from "../components/Section.astro";
 
 
     </p>
-    <br>
-    <br>
+         <!DOCTYPE html>
+      <html lang="en">
+      <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <style>
+              table {
+                  margin: auto;
+                  border-collapse: collapse;
+              }
+              th, td {
+                  border: 1px solid black;
+                  padding: 8px;
+                  text-align: left;
+              }
+              caption {
+                  caption-side: top;
+                  font-weight: bold;
+                  margin-bottom: 10px;
+              }
+              colgroup col:first-child {
+                  width: 25%;
+              }
+              colgroup col:last-child {
+                  width: 10%;
+              }
+          </style>
+      </head>
+
+<body>
+      <table>
+        <caption>Elasticity estimates used in the calculator</caption>
+      <tr>
+          <th></th>
+          <th>Elasticity range</th>
+      </tr>
+      <tr>
+          <td>Interstate/Freeways/Expressways</td>
+          <td>0.7 - 1.0</td>
+      </tr>
+      <tr>
+          <td>Principal Arterials</td>
+          <td>0.7 - 1.0</td>
+      </tr>
+      <tr>
+          <td>Minor arterials</td>
+          <td>0.5 - 0.7</td>
+      </tr>
+      <tr>
+          <td>Major and Minor collectors</td>
+          <td>0.5 - 0.7</td>
+      </tr>
+      <tr>
+          <td>Local</td>
+          <td>0.1 - 0.3</td>
+      </tr>
+  </table>
+</body>
+<br>
+<br>
    
 
   <h2>Calculations</h2>
